--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 
-# Created by https://www.gitignore.io/api/kotlin,intellij+iml
+# Created by https://www.gitignore.io/api/kotlin,gradle,intellij+iml
+# Edit at https://www.gitignore.io/?templates=kotlin,gradle,intellij+iml
 
 ### Intellij+iml ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
@@ -102,9 +103,26 @@ modules.xml
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+### Gradle ###
+.gradle
+/build/
 
-# End of https://www.gitignore.io/api/kotlin,intellij+iml
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
+
+### Gradle Patch ###
+**/build/
+
+# End of https://www.gitignore.io/api/kotlin,gradle,intellij+iml
 
 .attach_pid*
 run/
-build/
