basic framework for functionality and commands

--- a/.gitignore
+++ b/.gitignore
@@ -31,9 +31,5 @@ gradle-app.setting
 hs_err_pid*
 .attach_pid*
 
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
-
-# End of https://www.gitignore.io/api/kotlin,gradle,intellij+iml
-
 run/
+*.log
