--- a/versions.properties
+++ b/versions.properties
@@ -28,3 +28,5 @@ version.kotlinx.serialization=0.20.0
 ### available=1.3.2-1.4-M1-release-99
 ### available=1.3.2-1.4-M1
 ### available=1.3.2-1.4-M1-2
+
+version.joda-time..joda-time=2.10.6
