--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 
-# Created by https://www.gitignore.io/api/kotlin,gradle,intellij+iml
+# Created by https://www.gitignore.io/sibyl.api/kotlin,gradle,intellij+iml
 # Edit at https://www.gitignore.io/?templates=kotlin,gradle,intellij+iml
 
 ### Intellij+iml ###
@@ -33,3 +33,6 @@ hs_err_pid*
 
 run/
 *.log
+
+# config file
+matterbridge.toml
