--- a/versions.properties
+++ b/versions.properties
@@ -15,18 +15,15 @@ version.com.github.ajalt..clikt=2.8.0
 
 version.io.github.microutils..kotlin-logging=1.8.3
 
-version.kotlin=1.3.72
+version.joda-time..joda-time=2.10.6
 
-version.kotlinx.coroutines=1.3.8
-##             # available=1.3.8-1.4.0-rc-218
+version.kotlin=1.4.0
 
-version.kotlinx.serialization=0.20.0
+version.kotlinx.coroutines=1.3.9
+##             # available=1.3.9
+
+version.kotlinx.serialization=1.0.0-RC
 ##                # available=0.20.0-1.4-M1-release-99
 ##                # available=1.0-M1-1.4.0-rc-218
 
- version.ktor=1.3.2
-### available=1.3.2-1.4-M1-release-99
-### available=1.3.2-1.4-M1
-### available=1.3.2-1.4-M1-2
-
-version.joda-time..joda-time=2.10.6
+ version.ktor=1.3.2-1.4.0-rc
