--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,9 @@
 kotlin.code.style=official
+kotlin.stdlib.default.dependency=false
+
+org.gradle.caching=true
+org.gradle.parallel=true
+org.gradle.caching.debug=false
+org.gradle.configureondemand=false
+org.gradle.daemon.idletimeout= 10800000
+org.gradle.console=auto
