--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -24,5 +24,5 @@ jobs:
           arguments: 'publishAllPublicationsToBintrayRepository --stacktrace'
 #        if: startsWith(github.ref, 'refs/tags/')
         env:
-          BINTRAY_KEY: ${{ secrets.BINTRAY_KEY }}
+          BINTRAY_API_KEY: ${{ secrets.BINTRAY_API_KEY }}
           BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
