--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -21,7 +21,7 @@ jobs:
       - name: 'Publish to BinTray'
         uses: eskatos/gradle-command-action@v1
         with:
-          arguments: 'bintrayUpload --stacktrace'
+          arguments: 'bintrayUpload -Pnodryrun --stacktrace'
 #        if: startsWith(github.ref, 'refs/tags/')
         env:
           BINTRAY_API_KEY: ${{ secrets.BINTRAY_API_KEY }}
