--- a/versions.properties
+++ b/versions.properties
@@ -29,8 +29,7 @@ version.kotlinx.coroutines=1.3.9
 
 version.kotlinx.serialization=1.0.0-RC
 
- version.ktor=1.3.2-1.4.0-rc
-### available=1.4.0
+ version.ktor=1.4.0
 
 version.org.junit.jupiter..junit-jupiter-engine=5.6.2
 ##                                  # available=5.7.0-M1
