--- a/versions.properties
+++ b/versions.properties
@@ -6,14 +6,12 @@
 
 plugin.com.jfrog.bintray=1.8.5
 
+plugin.org.flywaydb.flyway=6.4.2
 plugin.com.vanniktech.dependency.graph.generator=0.5.0
 
 plugin.org.jetbrains.kotlin.jvm=version.kotlin
 
 plugin.org.jetbrains.kotlin.plugin.serialization=version.kotlin
-
-version.ch.qos.logback..logback-classic=1.2.3
-##                          # available=1.3.0-alpha5
 
 version.com.github.Ricky12Awesome..json-schema-serialization=0.5.2
 
@@ -33,3 +31,16 @@ version.kotlinx.serialization=1.0.0-RC
 
 version.org.junit.jupiter..junit-jupiter-engine=5.6.2
 ##                                  # available=5.7.0-M1
+
+version.logback-classic=1.2.3
+##          # available=1.3.0-alpha5
+
+version.joda-time=2.10.6
+
+ version.jooq=3.13.4
+
+version.postgresql=42.2.15
+
+version.Hikari=3.4.5
+
+version.flyway-core=6.5.5
