--- a/versions.properties
+++ b/versions.properties
@@ -6,20 +6,28 @@
 
 plugin.com.jfrog.bintray=1.8.5
 
-plugin.org.flywaydb.flyway=6.4.2
 plugin.com.vanniktech.dependency.graph.generator=0.5.0
+
+plugin.org.flywaydb.flyway=6.5.5
 
 plugin.org.jetbrains.kotlin.jvm=version.kotlin
 
 plugin.org.jetbrains.kotlin.plugin.serialization=version.kotlin
 
-version.com.github.Ricky12Awesome..json-schema-serialization=0.5.2
+plugins.com.squareup.sqldelight=version.sqldelight
+
+version.Hikari=3.4.5
 
 version.com.github.ajalt..clikt=2.8.0
+##                  # available=2.8.0.104-SNAPSHOT
+
+version.flyway-core=6.5.5
 
 version.io.github.microutils..kotlin-logging=1.8.3
 
-version.joda-time..joda-time=2.10.6
+version.joda-time=2.10.6
+
+ version.jooq=3.13.4
 
 version.kotlin=1.4.0
 
@@ -29,18 +37,12 @@ version.kotlinx.serialization=1.0.0-RC
 
  version.ktor=1.4.0
 
-version.org.junit.jupiter..junit-jupiter-engine=5.6.2
-##                                  # available=5.7.0-M1
-
 version.logback-classic=1.2.3
 ##          # available=1.3.0-alpha5
 
-version.joda-time=2.10.6
-
- version.jooq=3.13.4
+version.org.junit.jupiter..junit-jupiter-engine=5.6.2
+##                                  # available=5.7.0-M1
 
 version.postgresql=42.2.15
 
-version.Hikari=3.4.5
-
-version.flyway-core=6.5.5
+version.sqldelight=1.5.0-SNAPSHOT
