move build logic for modules into plugins

--- a/versions.properties
+++ b/versions.properties
@@ -15,7 +15,7 @@ plugin.org.jetbrains.kotlin.jvm=version.kotlin
 
 plugin.org.jetbrains.kotlin.plugin.serialization=version.kotlin
 
-plugins.com.squareup.sqldelight=version.sqldelight
+plugin.com.squareup.sqldelight=version.sqldelight
 
 version.Hikari=3.4.5
 
@@ -73,9 +73,6 @@ version.org.junit.jupiter..junit-jupiter-engine=5.6.2
 ##                                  # available=5.7.0-M1
 ##                                  # available=5.7.0-RC1
 
-version.postgresql=42.2.15
-##     # available=42.2.16.jre6
-##     # available=42.2.16.jre7
-##     # available=42.2.16
+version.postgresql=42.2.16
 
 version.sqldelight=1.5.0-SNAPSHOT
