--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -22,7 +22,17 @@ jobs:
         uses: eskatos/gradle-command-action@v1
         with:
           arguments: 'bintrayUpload -Pnodryrun --stacktrace'
-#        if: startsWith(github.ref, 'refs/tags/')
+        #        if: startsWith(github.ref, 'refs/tags/')
+        env:
+          BINTRAY_API_KEY: ${{ secrets.BINTRAY_API_KEY }}
+          BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
+
+      - name: 'Publish Plugin to BinTray'
+        uses: eskatos/gradle-command-action@v1
+        with:
+          arguments: 'bintrayUpload -Pnodryrun --stacktrace'
+          build-root-directory: 'plugin'
+        #        if: startsWith(github.ref, 'refs/tags/')
         env:
           BINTRAY_API_KEY: ${{ secrets.BINTRAY_API_KEY }}
           BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
