--- a/gradle.properties
+++ b/gradle.properties
@@ -9,4 +9,5 @@ org.gradle.daemon.idletimeout=10800000
 org.gradle.console=auto
 
 ## This a workaround for https://github.com/gradle/gradle/issues/11412
+## for CLI: -Dorg.gradle.internal.publish.checksums.insecure=true
 systemProp.org.gradle.internal.publish.checksums.insecure=true
