--- a/versions.properties
+++ b/versions.properties
@@ -6,16 +6,16 @@
 ## Please, don't put extra comments in that file yet, keeping them is not supported yet.
 
 plugin.com.jfrog.bintray=1.8.3
+##           # available=1.8.4
+##           # available=1.8.5
 
-plugin.com.vanniktech.dependency.graph.generator=0.5.0
+plugin.com.squareup.sqldelight=version.sqldelight
 
 plugin.org.flywaydb.flyway=6.5.5
 
 plugin.org.jetbrains.kotlin.jvm=version.kotlin
 
 plugin.org.jetbrains.kotlin.plugin.serialization=version.kotlin
-
-plugin.com.squareup.sqldelight=version.sqldelight
 
 version.Hikari=3.4.5
 
@@ -52,6 +52,9 @@ version.joda-time=2.10.6
 
 version.kotlin=1.4.0
 ## # available=1.4.255-SNAPSHOT
+
+version.kotlinpoet=1.6.0
+##     # available=1.7.0-SNAPSHOT
 
 version.kotlinx.coroutines=1.3.9
 
