add dependency graph back

--- a/versions.properties
+++ b/versions.properties
@@ -11,6 +11,8 @@ plugin.com.jfrog.bintray=1.8.3
 
 plugin.com.squareup.sqldelight=version.sqldelight
 
+plugin.com.vanniktech.dependency.graph.generator=0.5.0
+
 plugin.org.flywaydb.flyway=6.5.5
 
 plugin.org.jetbrains.kotlin.jvm=version.kotlin
