added privatebin support

--- a/versions.properties
+++ b/versions.properties
@@ -45,10 +45,15 @@ version.com.github.ajalt..clikt=2.8.0
 ##                  # available=2.8.0.104-SNAPSHOT
 ##                  # available=2.8.0.105-SNAPSHOT
 ##                  # available=2.8.0.106-SNAPSHOT
+##                  # available=2.8.0.107-SNAPSHOT
+##                  # available=2.8.0.108-SNAPSHOT
+##                  # available=2.8.0.109-SNAPSHOT
 
 version.flyway-core=6.5.5
 
 version.io.github.microutils..kotlin-logging=1.8.3
+
+version.io.github.novacrypto..Base58=2019.01.27
 
 version.joda-time=2.10.6
 
@@ -81,3 +86,11 @@ version.org.junit.jupiter..junit-jupiter-engine=5.6.2
 version.postgresql=42.2.16
 
 version.sqldelight=1.5.0-SNAPSHOT
+
+version.org.bouncycastle..bcpg-jdk15to18=1.66
+
+version.org.bouncycastle..bcprov-jdk15to18=1.66
+
+version.org.bouncycastle..bctls-jdk15to18=1.66
+
+version.org.bouncycastle..bcprov-ext-jdk15to18=1.64
